small issue with x overflow

--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ a {
 
 body {
     font-family: 'Poppins', sans-serif;
-    
+    overflow-x: hidden;
 }
 
 :root {
